@@ -8,20 +8,20 @@
 
 import optparse
 from itertools import ifilter, ifilterfalse
-from pkgcore.util.lists import iflatten_instance
+from snakeoil.lists import iflatten_instance
 
 from pkgcore_checks import base, util
 
-from pkgcore.util import (
-    demandload, currying, containers, mappings, iterables, lists)
+from snakeoil import (demandload, currying, containers, mappings, iterables, 
+    lists)
 demandload.demandload(
     globals(),
     'os '
     'errno '
-    'pkgcore.util:osutils '
+    'snakeoil:osutils '
     'pkgcore.restrictions:packages,values '
     'pkgcore.ebuild:misc,domain,profiles '
-    'pkgcore.util.file:read_dict '
+    'snakeoil.fileutils:read_dict '
     'pkgcore.log:logger '
     )
 
