@@ -20,8 +20,8 @@ identical to the input scope.
 import operator
 
 from pkgcore.config import ConfigHint
-from pkgcore.util.compatibility import any
-from pkgcore.util.demandload import demandload
+from snakeoil.compatibility import any
+from snakeoil.demandload import demandload
 demandload(globals(), "logging re itertools")
 
 repository_feed = "repo"
