@@ -2,7 +2,7 @@
 # License: GPL2
 
 from pkgcore_checks.base import Template, package_feed, Result, versioned_feed
-from pkgcore.util.compatibility import any
+from snakeoil.compatibility import any
 
 
 class RedundantVersionWarning(Result):
