@@ -4,10 +4,10 @@
 import os, optparse
 
 from pkgcore_checks import base
-from pkgcore.util.demandload import demandload
+from snakeoil.demandload import demandload
 demandload(globals(), "pkgcore.pkgsets.glsa:GlsaDirSet "
     "pkgcore.restrictions:packages,values "
-    "pkgcore.util:xml,osutils "
+    "snakeoil:xml,osutils "
     "pkgcore.restrictions.util:collect_package_restrictions "
     "warnings ")
 
